[gd_scene load_steps=8 format=3 uid="uid://player_scene"]

[ext_resource type="Script" path="res://entities/player.gd" id="1"]
[ext_resource type="Script" path="res://components/movement_component.gd" id="2"]
[ext_resource type="Script" path="res://components/health_component.gd" id="3"]
[ext_resource type="Script" path="res://components/attack_component.gd" id="4"]
[ext_resource type="Script" path="res://components/body_stats_component.gd" id="5"]
[ext_resource type="Script" path="res://components/attack_stats_component.gd" id="6"]
[ext_resource type="Script" path="res://components/teleport_component.gd" id="7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(20, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(40, 30)

[node name="Player" type="CharacterBody2D"]
collision_layer = 1
collision_mask = 2
script = ExtResource("1")

[node name="Visual" type="ColorRect" parent="."]
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
color = Color(0.5, 0.8, 0.5, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("2")
speed = 100.0

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3")
max_health = 50

[node name="AttackComponent" type="Node" parent="."]
script = ExtResource("4")
damage = 5
attack_range = 35.0

[node name="BodyStatsComponent" type="Node" parent="."]
script = ExtResource("5")

[node name="AttackStatsComponent" type="Node" parent="."]
script = ExtResource("6")

[node name="TeleportComponent" type="Node" parent="."]
script = ExtResource("7")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="AttackVisual" type="ColorRect" parent="AttackArea"]
offset_left = 15.0
offset_top = -15.0
offset_right = 45.0
offset_bottom = 15.0
color = Color(1, 1, 0, 0.6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(30, 0)
shape = SubResource("RectangleShape2D_2")
